--- a/GSB_Mission_5_Server/GSB_Mission_5_Server/GSB_Mission_5_Server.csproj
+++ b/GSB_Mission_5_Server/GSB_Mission_5_Server/GSB_Mission_5_Server.csproj
@@ -274,6 +274,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoefficientConfianceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PraticienController.cs" />
     <Compile Include="Controllers\RapportVisiteController.cs" />
@@ -284,6 +285,7 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CoefficientConfiance.cs" />
     <Compile Include="Models\Const.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Praticien.cs" />
